# KSC-TCU-Firmware

./: .cproject  .gitignore  .gitmodules  .old  .project  CMakeLists.txt  README.md  sdkconfig
components/L1s3dhtr/: CMakeLists.txt  L1s3dhtr.c
components/L1s3dhtr/include/: L1s3dhtr.h
components/Quectel_gps/: CMakeLists.txt  Quectel_gps.c
components/Quectel_gps/include/: Quectel_gps.h
components/Quectel_mqtt/: CMakeLists.txt  Quectel_mqtt.c
components/Quectel_mqtt/include/: Quectel_mqtt.h
components/bms_monitor_task/: CMakeLists.txt  bms_monitor_task.c
components/bms_monitor_task/include/: bms_monitor_task.h
components/bms_monitor_types/: CMakeLists.txt  bms_monitor_types.c
components/bms_monitor_types/include/: bms_monitor_types.h
components/bms_rs485_mux/: CMakeLists.txt  bms_rs485_mux.c
components/bms_rs485_mux/include/: bms_rs485_mux.h
components/board_config/: CMakeLists.txt  board_config.c
components/board_config/include/: board_config.h  version.h
components/factory_test/: CMakeLists.txt  factory_test.c
components/jk_bms/: .gitmodules  CMakeLists.txt  README.md
components/jk_bms/Inc/: jk_bms.h  (+1 more)
components/jkbms_serial_storage/: CMakeLists.txt  jkbms_serial_storage.c
components/lis3dhtr/: CMakeLists.txt  lis3dhtr.c
components/modbus_rtu/: CMakeLists.txt  README.md
components/power_trike_ctrl/: CMakeLists.txt  power_trike_ctrl.c
components/rgb_led/: CMakeLists.txt  rgb_led.c
components/tcu_nvs_creds/: CMakeLists.txt  tcu_nvs_creds.c
components/trike_sensors/: CMakeLists.txt  trike_sensors.c
main/: CMakeLists.txt  main.c
(+10 files in other folders)
